--- a/Weekly Test - 5 CSS Properties/index.html
+++ b/Weekly Test - 5 CSS Properties/index.html
@@ -78,22 +78,22 @@
       <div class="shop-images">
         <div class="shop-link" data-aos="flip-left" data-aos-duration="900">
           <h3>Shop Laptops &amp; Tables</h3>
-          <img src="/img-1.png" alt="card">
+          <img src="./img-1.png" alt="card">
           <a href="#">Shop now</a>
         </div>
         <div class="shop-link" data-aos="flip-left" data-aos-duration="1000">
           <h3>Shop Smartwatches</h3>
-          <img src="/img-2.png" alt="card">
+          <img src="./img-2.png" alt="card">
           <a href="#">Shop now</a>
         </div>
         <div class="shop-link" data-aos="flip-left" data-aos-duration="1100">
           <h3>Create with Strip Lights</h3>
-          <img src="/img-3.png" alt="card">
+          <img src="./img-3.png" alt="card">
           <a href="#">Shop now</a>
         </div>
         <div class="shop-link" data-aos="flip-left" data-aos-duration="1200">
           <h3>Home Refresh Ideas</h3>
-          <img src="/img-4.png" alt="card">
+          <img src="./img-4.png" alt="card">
           <a href="#">Shop now</a>
         </div>
       </div>
